GTK4/Package_Tools/include-C/gsk/in_Arbeit/fertig/gskrendernode.h

#define GSK_SERIALIZATION_ERROR       (gsk_serialization_error_quark ())
typedef struct _GskColorStop            GskColorStop;
/**
 * GskParseErrorFunc:
 * @start: start of the error location
 * @end: end of the error location
 * @error: the error
 * @user_data: user data
 *
 * Type of callback that is called when an error occurs
 * during node deserialization.
 */
typedef void           (* GskParseErrorFunc)                    (const GskParseLocation *start,
                                                                 const GskParseLocation *end,
                                                                 const GError           *error,
                                                                 gpointer                user_data);
GType                   gsk_render_node_get_type                (void) ;
GQuark                  gsk_serialization_error_quark           (void);
GskRenderNode *         gsk_render_node_ref                     (GskRenderNode *node);
void                    gsk_render_node_unref                   (GskRenderNode *node);
GskRenderNodeType       gsk_render_node_get_node_type           (const GskRenderNode *node);
void                    gsk_render_node_get_bounds              (GskRenderNode   *node,
                                                                 graphene_rect_t *bounds);
void                    gsk_render_node_draw                    (GskRenderNode *node,
                                                                 cairo_t       *cr);
GBytes *                gsk_render_node_serialize               (GskRenderNode *node);
gboolean                gsk_render_node_write_to_file           (GskRenderNode *node,
                                                                 const char    *filename,
                                                                 GError       **error);
GskRenderNode *         gsk_render_node_deserialize             (GBytes            *bytes,
                                                                 GskParseErrorFunc  error_func,
                                                                 gpointer           user_data);
#define GSK_TYPE_DEBUG_NODE                     (gsk_debug_node_get_type())
#define GSK_TYPE_COLOR_NODE                     (gsk_color_node_get_type())
#define GSK_TYPE_TEXTURE_NODE                   (gsk_texture_node_get_type())
#define GSK_TYPE_TEXTURE_SCALE_NODE             (gsk_texture_scale_node_get_type())
#define GSK_TYPE_LINEAR_GRADIENT_NODE           (gsk_linear_gradient_node_get_type())
#define GSK_TYPE_REPEATING_LINEAR_GRADIENT_NODE (gsk_repeating_linear_gradient_node_get_type())
#define GSK_TYPE_RADIAL_GRADIENT_NODE           (gsk_radial_gradient_node_get_type())
#define GSK_TYPE_REPEATING_RADIAL_GRADIENT_NODE (gsk_repeating_radial_gradient_node_get_type())
#define GSK_TYPE_CONIC_GRADIENT_NODE            (gsk_conic_gradient_node_get_type())
#define GSK_TYPE_BORDER_NODE                    (gsk_border_node_get_type())
#define GSK_TYPE_INSET_SHADOW_NODE              (gsk_inset_shadow_node_get_type())
#define GSK_TYPE_OUTSET_SHADOW_NODE             (gsk_outset_shadow_node_get_type())
#define GSK_TYPE_CAIRO_NODE                     (gsk_cairo_node_get_type())
#define GSK_TYPE_CONTAINER_NODE                 (gsk_container_node_get_type())
#define GSK_TYPE_TRANSFORM_NODE                 (gsk_transform_node_get_type())
#define GSK_TYPE_OPACITY_NODE                   (gsk_opacity_node_get_type())
#define GSK_TYPE_COLOR_MATRIX_NODE              (gsk_color_matrix_node_get_type())
#define GSK_TYPE_REPEAT_NODE                    (gsk_repeat_node_get_type())
#define GSK_TYPE_CLIP_NODE                      (gsk_clip_node_get_type())
#define GSK_TYPE_ROUNDED_CLIP_NODE              (gsk_rounded_clip_node_get_type())
#define GSK_TYPE_FILL_NODE                      (gsk_fill_node_get_type())
#define GSK_TYPE_STROKE_NODE                    (gsk_stroke_node_get_type())
#define GSK_TYPE_SHADOW_NODE                    (gsk_shadow_node_get_type())
#define GSK_TYPE_BLEND_NODE                     (gsk_blend_node_get_type())
#define GSK_TYPE_CROSS_FADE_NODE                (gsk_cross_fade_node_get_type())
#define GSK_TYPE_TEXT_NODE                      (gsk_text_node_get_type())
#define GSK_TYPE_BLUR_NODE                      (gsk_blur_node_get_type())
#define GSK_TYPE_MASK_NODE                      (gsk_mask_node_get_type())
#define GSK_TYPE_GL_SHADER_NODE                 (gsk_gl_shader_node_get_type())
#define GSK_TYPE_SUBSURFACE_NODE                (gsk_subsurface_node_get_type())
GType                   gsk_debug_node_get_type                 (void) ;
GskRenderNode *         gsk_debug_node_new                      (GskRenderNode            *child,
                                                                 char                     *message);
GskRenderNode *         gsk_debug_node_get_child                (const GskRenderNode      *node) ;
const char *            gsk_debug_node_get_message              (const GskRenderNode      *node) ;
GType                   gsk_color_node_get_type                 (void) ;
GskRenderNode *         gsk_color_node_new                      (const GdkRGBA            *rgba,
                                                                 const graphene_rect_t    *bounds);
const GdkRGBA *         gsk_color_node_get_color                (const GskRenderNode      *node) ;
GType                   gsk_texture_node_get_type               (void) ;
GskRenderNode *         gsk_texture_node_new                    (GdkTexture               *texture,
                                                                 const graphene_rect_t    *bounds);
GdkTexture *            gsk_texture_node_get_texture            (const GskRenderNode      *node) ;
GType                   gsk_texture_scale_node_get_type         (void) ;
GskRenderNode *         gsk_texture_scale_node_new              (GdkTexture               *texture,
                                                                 const graphene_rect_t    *bounds,
                                                                 GskScalingFilter          filter);
GdkTexture *            gsk_texture_scale_node_get_texture      (const GskRenderNode      *node) ;
GskScalingFilter        gsk_texture_scale_node_get_filter       (const GskRenderNode      *node) ;
GType                   gsk_linear_gradient_node_get_type           (void) ;
GskRenderNode *         gsk_linear_gradient_node_new                (const graphene_rect_t    *bounds,
                                                                     const graphene_point_t   *start,
                                                                     const graphene_point_t   *end,
                                                                     const GskColorStop       *color_stops,
                                                                     gsize                     n_color_stops);
const graphene_point_t * gsk_linear_gradient_node_get_start         (const GskRenderNode      *node) ;
const graphene_point_t * gsk_linear_gradient_node_get_end           (const GskRenderNode      *node) ;
gsize                    gsk_linear_gradient_node_get_n_color_stops (const GskRenderNode      *node) ;
const GskColorStop *     gsk_linear_gradient_node_get_color_stops   (const GskRenderNode      *node,
                                                                     gsize                    *n_stops);
GType                   gsk_repeating_linear_gradient_node_get_type (void) ;
GskRenderNode *         gsk_repeating_linear_gradient_node_new      (const graphene_rect_t    *bounds,
                                                                     const graphene_point_t   *start,
                                                                     const graphene_point_t   *end,
                                                                     const GskColorStop       *color_stops,
                                                                     gsize                     n_color_stops);
GType                   gsk_conic_gradient_node_get_type            (void) ;
GskRenderNode *         gsk_conic_gradient_node_new                 (const graphene_rect_t    *bounds,
                                                                     const graphene_point_t   *center,
                                                                     float                     rotation,
                                                                     const GskColorStop       *color_stops,
                                                                     gsize                     n_color_stops);
const graphene_point_t * gsk_conic_gradient_node_get_center         (const GskRenderNode      *node) ;
float                    gsk_conic_gradient_node_get_rotation       (const GskRenderNode      *node) ;
float                    gsk_conic_gradient_node_get_angle          (const GskRenderNode      *node) ;
gsize                    gsk_conic_gradient_node_get_n_color_stops  (const GskRenderNode      *node) ;
const GskColorStop *     gsk_conic_gradient_node_get_color_stops    (const GskRenderNode      *node,
                                                                     gsize                    *n_stops);
GType                   gsk_radial_gradient_node_get_type (void) ;
GskRenderNode *         gsk_radial_gradient_node_new      (const graphene_rect_t    *bounds,
                                                           const graphene_point_t   *center,
                                                           float                     hradius,
                                                           float                     vradius,
                                                           float                     start,
                                                           float                     end,
                                                           const GskColorStop       *color_stops,
                                                           gsize                     n_color_stops);
gsize                   gsk_radial_gradient_node_get_n_color_stops (const GskRenderNode *node) ;
const GskColorStop *    gsk_radial_gradient_node_get_color_stops   (const GskRenderNode *node,
                                                                    gsize               *n_stops);
const graphene_point_t *gsk_radial_gradient_node_get_center        (const GskRenderNode *node) ;
float                   gsk_radial_gradient_node_get_hradius       (const GskRenderNode *node) ;
float                   gsk_radial_gradient_node_get_vradius       (const GskRenderNode *node) ;
float                   gsk_radial_gradient_node_get_start         (const GskRenderNode *node) ;
float                   gsk_radial_gradient_node_get_end           (const GskRenderNode *node) ;
GType                   gsk_repeating_radial_gradient_node_get_type (void) ;
GskRenderNode *         gsk_repeating_radial_gradient_node_new      (const graphene_rect_t    *bounds,
                                                                     const graphene_point_t   *center,
                                                                     float                     hradius,
                                                                     float                     vradius,
                                                                     float                     start,
                                                                     float                     end,
                                                                     const GskColorStop       *color_stops,
                                                                     gsize                     n_color_stops);
GType                   gsk_border_node_get_type                (void) ;