GTK4/Package_Tools/pas_units/GSK/gskrendernode.pas

unit gskrendernode;

interface

uses
  glib2, pango, Cairo, common_GTK, GDK4, gsktypes, gskenums, gsktransform, gskglshader, gskroundedrect, gskpath, gskstroke;

  {$IFDEF FPC}
  {$PACKRECORDS C}
  {$ENDIF}



function GSK_SERIALIZATION_ERROR: TGQuark;

type
  TGskColorStop = record
    offset: single;
    color: TGdkRGBA;
  end;
  PGskColorStop = ^TGskColorStop;

  TGskShadow = record
    color: TGdkRGBA;
    dx: single;
    dy: single;
    radius: single;
  end;
  PGskShadow = ^TGskShadow;

  TGskParseLocation = record
    bytes: Tgsize;
    chars: Tgsize;
    Lines: Tgsize;
    line_bytes: Tgsize;
    line_chars: Tgsize;
  end;
  PGskParseLocation = ^TGskParseLocation;

  TGskParseErrorFunc = procedure(start: PGskParseLocation; _end: PGskParseLocation; error: PGError; user_data: Tgpointer); cdecl;

type
  TGskRenderNode = record
  end;
  PGskRenderNode = ^TGskRenderNode;
  PPGskRenderNode = ^PGskRenderNode;

function gsk_render_node_get_type: TGType; cdecl; external gtklib;
function gsk_serialization_error_quark: TGQuark; cdecl; external gtklib;
function gsk_render_node_ref(node: PGskRenderNode): PGskRenderNode; cdecl; external gtklib;
procedure gsk_render_node_unref(node: PGskRenderNode); cdecl; external gtklib;
function gsk_render_node_get_node_type(node: PGskRenderNode): TGskRenderNodeType; cdecl; external gtklib;
procedure gsk_render_node_get_bounds(node: PGskRenderNode; bounds: Pgraphene_rect_t); cdecl; external gtklib;
procedure gsk_render_node_draw(node: PGskRenderNode; cr: Pcairo_t); cdecl; external gtklib;
function gsk_render_node_serialize(node: PGskRenderNode): PGBytes; cdecl; external gtklib;
function gsk_render_node_write_to_file(node: PGskRenderNode; filename: PChar; error: PPGError): Tgboolean; cdecl; external gtklib;
function gsk_render_node_deserialize(bytes: PGBytes; error_func: TGskParseErrorFunc; user_data: Tgpointer): PGskRenderNode; cdecl; external gtklib;

function GSK_TYPE_DEBUG_NODE: TGType;


function GSK_TYPE_COLOR_NODE: TGType;


function GSK_TYPE_TEXTURE_NODE: TGType;


function GSK_TYPE_TEXTURE_SCALE_NODE: TGType;


function GSK_TYPE_LINEAR_GRADIENT_NODE: TGType;


function GSK_TYPE_REPEATING_LINEAR_GRADIENT_NODE: TGType;


function GSK_TYPE_RADIAL_GRADIENT_NODE: TGType;


function GSK_TYPE_REPEATING_RADIAL_GRADIENT_NODE: TGType;


function GSK_TYPE_CONIC_GRADIENT_NODE: TGType;


function GSK_TYPE_BORDER_NODE: TGType;


function GSK_TYPE_INSET_SHADOW_NODE: TGType;


function GSK_TYPE_OUTSET_SHADOW_NODE: TGType;


function GSK_TYPE_CAIRO_NODE: TGType;


function GSK_TYPE_CONTAINER_NODE: TGType;


function GSK_TYPE_TRANSFORM_NODE: TGType;


function GSK_TYPE_OPACITY_NODE: TGType;


function GSK_TYPE_COLOR_MATRIX_NODE: TGType;


function GSK_TYPE_REPEAT_NODE: TGType;


function GSK_TYPE_CLIP_NODE: TGType;


function GSK_TYPE_ROUNDED_CLIP_NODE: TGType;


function GSK_TYPE_FILL_NODE: TGType;


function GSK_TYPE_STROKE_NODE: TGType;


function GSK_TYPE_SHADOW_NODE: TGType;


function GSK_TYPE_BLEND_NODE: TGType;


function GSK_TYPE_CROSS_FADE_NODE: TGType;


function GSK_TYPE_TEXT_NODE: TGType;


function GSK_TYPE_BLUR_NODE: TGType;


function GSK_TYPE_MASK_NODE: TGType;


function GSK_TYPE_GL_SHADER_NODE: TGType;


function GSK_TYPE_SUBSURFACE_NODE: TGType;

function gsk_debug_node_get_type: TGType; cdecl; external gtklib;
function gsk_debug_node_new(child: PGskRenderNode; message: PChar): PGskRenderNode; cdecl; external gtklib;
function gsk_debug_node_get_child(node: PGskRenderNode): PGskRenderNode; cdecl; external gtklib;
function gsk_debug_node_get_message(node: PGskRenderNode): PChar; cdecl; external gtklib;
function gsk_color_node_get_type: TGType; cdecl; external gtklib;
function gsk_color_node_new(rgba: PGdkRGBA; bounds: Pgraphene_rect_t): PGskRenderNode; cdecl; external gtklib;
function gsk_color_node_get_color(node: PGskRenderNode): PGdkRGBA; cdecl; external gtklib;
function gsk_texture_node_get_type: TGType; cdecl; external gtklib;
function gsk_texture_node_new(texture: PGdkTexture; bounds: Pgraphene_rect_t): PGskRenderNode; cdecl; external gtklib;
function gsk_texture_node_get_texture(node: PGskRenderNode): PGdkTexture; cdecl; external gtklib;
function gsk_texture_scale_node_get_type: TGType; cdecl; external gtklib;
function gsk_texture_scale_node_new(texture: PGdkTexture; bounds: Pgraphene_rect_t; filter: TGskScalingFilter): PGskRenderNode; cdecl; external gtklib;
function gsk_texture_scale_node_get_texture(node: PGskRenderNode): PGdkTexture; cdecl; external gtklib;
function gsk_texture_scale_node_get_filter(node: PGskRenderNode): TGskScalingFilter; cdecl; external gtklib;
function gsk_linear_gradient_node_get_type: TGType; cdecl; external gtklib;
function gsk_linear_gradient_node_new(bounds: Pgraphene_rect_t; start: Pgraphene_point_t; _end: Pgraphene_point_t; color_stops: PGskColorStop; n_color_stops: Tgsize): PGskRenderNode; cdecl; external gtklib;
function gsk_linear_gradient_node_get_start(node: PGskRenderNode): Pgraphene_point_t; cdecl; external gtklib;
function gsk_linear_gradient_node_get_end(node: PGskRenderNode): Pgraphene_point_t; cdecl; external gtklib;
function gsk_linear_gradient_node_get_n_color_stops(node: PGskRenderNode): Tgsize; cdecl; external gtklib;
function gsk_linear_gradient_node_get_color_stops(node: PGskRenderNode; n_stops: Pgsize): PGskColorStop; cdecl; external gtklib;
function gsk_repeating_linear_gradient_node_get_type: TGType; cdecl; external gtklib;
function gsk_repeating_linear_gradient_node_new(bounds: Pgraphene_rect_t; start: Pgraphene_point_t; _end: Pgraphene_point_t; color_stops: PGskColorStop; n_color_stops: Tgsize): PGskRenderNode; cdecl; external gtklib;
function gsk_conic_gradient_node_get_type: TGType; cdecl; external gtklib;
function gsk_conic_gradient_node_new(bounds: Pgraphene_rect_t; center: Pgraphene_point_t; rotation: single; color_stops: PGskColorStop; n_color_stops: Tgsize): PGskRenderNode; cdecl; external gtklib;
function gsk_conic_gradient_node_get_center(node: PGskRenderNode): Pgraphene_point_t; cdecl; external gtklib;
function gsk_conic_gradient_node_get_rotation(node: PGskRenderNode): single; cdecl; external gtklib;
function gsk_conic_gradient_node_get_angle(node: PGskRenderNode): single; cdecl; external gtklib;
function gsk_conic_gradient_node_get_n_color_stops(node: PGskRenderNode): Tgsize; cdecl; external gtklib;
function gsk_conic_gradient_node_get_color_stops(node: PGskRenderNode; n_stops: Pgsize): PGskColorStop; cdecl; external gtklib;
function gsk_radial_gradient_node_get_type: TGType; cdecl; external gtklib;
function gsk_radial_gradient_node_new(bounds: Pgraphene_rect_t; center: Pgraphene_point_t; hradius: single; vradius: single; start: single;
  _end: single; color_stops: PGskColorStop; n_color_stops: Tgsize): PGskRenderNode; cdecl; external gtklib;
function gsk_radial_gradient_node_get_n_color_stops(node: PGskRenderNode): Tgsize; cdecl; external gtklib;
function gsk_radial_gradient_node_get_color_stops(node: PGskRenderNode; n_stops: Pgsize): PGskColorStop; cdecl; external gtklib;
function gsk_radial_gradient_node_get_center(node: PGskRenderNode): Pgraphene_point_t; cdecl; external gtklib;
function gsk_radial_gradient_node_get_hradius(node: PGskRenderNode): single; cdecl; external gtklib;
function gsk_radial_gradient_node_get_vradius(node: PGskRenderNode): single; cdecl; external gtklib;
function gsk_radial_gradient_node_get_start(node: PGskRenderNode): single; cdecl; external gtklib;
function gsk_radial_gradient_node_get_end(node: PGskRenderNode): single; cdecl; external gtklib;
function gsk_repeating_radial_gradient_node_get_type: TGType; cdecl; external gtklib;
function gsk_repeating_radial_gradient_node_new(bounds: Pgraphene_rect_t; center: Pgraphene_point_t; hradius: single; vradius: single; start: single;
  _end: single; color_stops: PGskColorStop; n_color_stops: Tgsize): PGskRenderNode; cdecl; external gtklib;
function gsk_border_node_get_type: TGType; cdecl; external gtklib;

type
  TVec4f = array[0..3] of single;
  Tborder_colors = array[0..3] of TGdkRGBA;
